--- a/lession3456/pubspec.yaml
+++ b/lession3456/pubspec.yaml
@@ -33,6 +33,9 @@ dependencies:
   http: ^1.2.2
   provider: ^6.1.2
   shared_preferences: ^2.3.2
+  sqflite: ^2.3.3+2
+  html: ^0.15.4
+  intl: ^0.18.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
